--- a/acl/readme
+++ b/acl/readme
@@ -2,7 +2,8 @@
 
 由于直接用网段判断代理时，dns污染后返回的ip也属于大陆ip，会导致无法代理，所以加入域名列表，顺手加上antiAD
 
-'''
+```
 #使用
-python3 GetRoutes.py
-'''
+>python3 GetRoutes.py
+Generate complete.
+```
